# zalc

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  Makefile.in  NEWS  PKGBUILD  README  README.md  config.status  configure  configure.ac  zalc.cpp  zalc.desktop
src/: Makefile  Makefile.am  Makefile.in  main.cpp
src/.deps/: main.Po
