# ======================== initialization ===============================
AC_INIT([Zalc],
        [1.2.3],
        [xziggix@gmail.com],
        [zalc])

AC_CONFIG_SRCDIR([src/main.cpp])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

# ==================== basic compiler settings ==========================
AC_PROG_CXX

# ==================== generate files ===================================
AC_CONFIG_FILES([
  Makefile
  src/Makefile
])
AC_OUTPUT
